feat: add storefront, order page and admin ui
